# qchess

./: CMakeLists.txt  GameState.h  LICENSE  Main.qml  README.md  board.cpp  board.h  controller.cpp  controller.h  pieces.h  square.h  validator.cpp  validator.h
qml/: Main.qml
qml/components/: BasicTheme.qml  Board.qml  BoardContainer.qml  ChessMenu.qml  GameOver.qml  Promotion.qml
src/: board.cpp  board.h  controller.cpp  controller.h  gamestate.h  main.cpp  moveexecutor.cpp  moveexecutor.h  pieces.h  square.cpp  square.h  validator.cpp  validator.h
